# services/api/index.ts
@@ -18,6 +18,7 @@ export type { DifficultyStatsDTO } from './models/DifficultyStatsDTO';
 export type { FaqItemDTO } from './models/FaqItemDTO';
 export type { PostDTO } from './models/PostDTO';
 export type { PostTranslationDTO } from './models/PostTranslationDTO';
+export { ProblemListDTO } from './models/ProblemListDTO';
 export type { SitemapCategoryDTO } from './models/SitemapCategoryDTO';
 export type { SitemapPostDTO } from './models/SitemapPostDTO';
 export { SubmissionDTO } from './models/SubmissionDTO';
@@ -30,5 +31,6 @@ export { DashboardResourceService } from './services/DashboardResourceService';
 export { PublicAuthResourceService } from './services/PublicAuthResourceService';
 export { PublicContactApiService } from './services/PublicContactApiService';
 export { PublicPostIntegrationApiService } from './services/PublicPostIntegrationApiService';
+export { PublicProblemResourceService } from './services/PublicProblemResourceService';
 export { PublicSitemapApiService } from './services/PublicSitemapApiService';
 export { SubmissionResourceService } from './services/SubmissionResourceService';
