# swagger.json
@@ -311,6 +311,107 @@
                 }
             }
         },
+        "/api/public/problems": {
+            "get": {
+                "tags": [
+                    "public-problem-resource"
+                ],
+                "operationId": "getAllProblems",
+                "parameters": [
+                    {
+                        "name": "lang",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "default": "tr"
+                        }
+                    },
+                    {
+                        "name": "title",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "difficulty",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "EASY",
+                                "MEDIUM",
+                                "HARD"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "tagIds",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer",
+                                "format": "int64"
+                            }
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Zero-based page index (0..N)",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 0,
+                            "minimum": 0
+                        }
+                    },
+                    {
+                        "name": "size",
+                        "in": "query",
+                        "description": "The size of the page to be returned",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 20,
+                            "minimum": 1
+                        }
+                    },
+                    {
+                        "name": "sort",
+                        "in": "query",
+                        "description": "Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/ProblemListDTO"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/public/posts": {
             "get": {
                 "tags": [
@@ -891,6 +992,58 @@
                     "website"
                 ]
             },
+            "ProblemListDTO": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "title": {
+                        "type": "string"
+                    },
+                    "slug": {
+                        "type": "string"
+                    },
+                    "difficulty": {
+                        "type": "string",
+                        "enum": [
+                            "EASY",
+                            "MEDIUM",
+                            "HARD"
+                        ]
+                    },
+                    "tags": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/TagDTO"
+                        },
+                        "uniqueItems": true
+                    }
+                }
+            },
+            "TagDTO": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "website": {
+                        "$ref": "#/components/schemas/WebsiteDTO"
+                    },
+                    "postses": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/PostDTO"
+                        },
+                        "uniqueItems": true
+                    }
+                },
+                "required": [
+                    "website"
+                ]
+            },
             "PostTranslationDTO": {
                 "type": "object",
                 "properties": {
@@ -946,28 +1099,6 @@
                     "post",
                     "slug",
                     "title"
-                ]
-            },
-            "TagDTO": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    "website": {
-                        "$ref": "#/components/schemas/WebsiteDTO"
-                    },
-                    "postses": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/PostDTO"
-                        },
-                        "uniqueItems": true
-                    }
-                },
-                "required": [
-                    "website"
                 ]
             },
             "DashboardStatsDTO": {
